[gd_scene load_steps=10 format=3 uid="uid://c4i68vt1gq8qm"]

[ext_resource type="Script" path="res://Scenes/game.gd" id="1_mdkhk"]
[ext_resource type="Texture2D" uid="uid://dn64ox4th4yti" path="res://Assets/Flag Outlines/2-3 Flag Outline.png" id="2_w2jg7"]
[ext_resource type="Texture2D" uid="uid://bd05d1ohjbkc" path="res://Assets/home.png" id="3_vqyei"]
[ext_resource type="Texture2D" uid="uid://dyro6sm27i2aj" path="res://Assets/controls.png" id="4_wxt74"]
[ext_resource type="Texture2D" uid="uid://dtvagwovd2sen" path="res://Assets/world-flags.png" id="5_fmgdn"]
[ext_resource type="Texture2D" uid="uid://cx80rrx22p837" path="res://Assets/Flags/EASY/argentina.png" id="6_bulj3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dca1t"]
bg_color = Color(0.289182, 0.281188, 0.393334, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_top = 20.0
expand_margin_right = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pia2r"]
bg_color = Color(0.145098, 0.298039, 0.498039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfy5f"]
content_margin_left = 10.0
bg_color = Color(0.145098, 0.298039, 0.498039, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 10.0
expand_margin_bottom = 5.0

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mdkhk")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="FlagOutline" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(320, 240)
texture = ExtResource("2_w2jg7")

[node name="Line2D" type="Line2D" parent="."]

[node name="TopControls" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -217.0
offset_top = 30.0
offset_right = 217.0
offset_bottom = 61.0
grow_horizontal = 2
theme_override_constants/separation = 30

[node name="LineWidthSlider" type="HSlider" parent="TopControls"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="SaveColourButton" type="Button" parent="TopControls"]
z_index = 1
layout_mode = 2
text = "Save Colour"

[node name="ColorPickerButton" type="ColorPickerButton" parent="TopControls"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="DeleteColourButton" type="Button" parent="TopControls"]
z_index = 1
layout_mode = 2
text = "Delete Colour"

[node name="BottomControls" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.5
offset_top = -70.0
offset_right = 24.5
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 30

[node name="ClearButton" type="Button" parent="BottomControls"]
z_index = 1
layout_mode = 2
text = "Clear Canvas"

[node name="CountryLabel" type="Label" parent="BottomControls"]
unique_name_in_owner = true
z_index = 1
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Country Name"

[node name="SubmitButton" type="Button" parent="BottomControls"]
z_index = 1
layout_mode = 2
text = "Submit Flag"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -10.0
offset_right = -20.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2

[node name="HomeControls" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -57.0
offset_right = 60.0
offset_bottom = 27.0
grow_vertical = 2

[node name="HomeButton" type="Button" parent="HomeControls"]
z_index = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = ExtResource("3_vqyei")
flat = true
expand_icon = true

[node name="ControlsButton" type="Button" parent="HomeControls"]
z_index = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = ExtResource("4_wxt74")
flat = true
expand_icon = true

[node name="ControlPanelContainer" type="PanelContainer" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dca1t")

[node name="VBoxContainer" type="VBoxContainer" parent="ControlPanelContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="ControlsLabel" type="Label" parent="ControlPanelContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="ControlPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[node name="SubmitPanelContainer" type="PanelContainer" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -200.0
offset_right = 210.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dca1t")

[node name="ScrollContainer" type="ScrollContainer" parent="SubmitPanelContainer"]
layout_mode = 2
scroll_vertical = 100

[node name="VBoxContainer" type="VBoxContainer" parent="SubmitPanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="CongratsLabel" type="Label" parent="SubmitPanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(392, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Congrats!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="DrawingLabel" type="Label" parent="SubmitPanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Your Drawing:"

[node name="TextureRect" type="TextureRect" parent="SubmitPanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
texture = ExtResource("5_fmgdn")
expand_mode = 1

[node name="LoadingLabel" type="Label" parent="SubmitPanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Saving Drawing..."
horizontal_alignment = 1

[node name="SaveButton" type="Button" parent="SubmitPanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Save Drawing"

[node name="OriginalLabel" type="Label" parent="SubmitPanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Original Flag:"

[node name="OriginalTextureRect" type="TextureRect" parent="SubmitPanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("6_bulj3")
expand_mode = 5
stretch_mode = 5

[node name="ScoreTitleLabel" type="Label" parent="SubmitPanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_pia2r")
text = "Scoring"
horizontal_alignment = 1

[node name="AccuracyLabel" type="Label" parent="SubmitPanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_bfy5f")
text = "Approximate Accuracy: "

[node name="AverageLabel" type="Label" parent="SubmitPanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_bfy5f")
text = "Average Accuracy: "

[node name="GamesLabel" type="Label" parent="SubmitPanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_bfy5f")
text = "Games Played: "

[node name="GalleryButton" type="Button" parent="SubmitPanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Gallery"

[node name="BackButton" type="Button" parent="SubmitPanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Home"

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -150.0
offset_right = 225.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
border_width = 5.0

[connection signal="pressed" from="TopControls/SaveColourButton" to="." method="_on_save_colour_button_pressed"]
[connection signal="pressed" from="TopControls/DeleteColourButton" to="." method="_on_delete_colour_button_pressed"]
[connection signal="pressed" from="BottomControls/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="BottomControls/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="HomeControls/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="HomeControls/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="ControlPanelContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SubmitPanelContainer/ScrollContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="SubmitPanelContainer/ScrollContainer/VBoxContainer/GalleryButton" to="." method="_on_gallery_button_pressed"]
[connection signal="pressed" from="SubmitPanelContainer/ScrollContainer/VBoxContainer/BackButton" to="." method="_on_home_button_pressed"]
